<?xml version="1.0"?>
<!--package format="2"-->
<package format="2">
  <name>joint_value_monitor</name>
  <version>0.0.0</version>
  <description>The joint_value_monitor package</description>

  <maintainer email="shantengfei@todo.todo">shantengfei</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
